@@ -1,9 +1,3 @@
-@MOZ_PKG_NAME@ binary: embedded-library @MOZ_LIBDIR@/libxul.so: libjpeg
-@MOZ_PKG_NAME@ binary: embedded-library @MOZ_LIBDIR@/libxul.so: sqlite
-@MOZ_PKG_NAME@ binary: image-file-in-usr-lib @MOZ_LIBDIR@/icons/document.png
-@MOZ_PKG_NAME@ binary: image-file-in-usr-lib @MOZ_LIBDIR@/icons/mozicon128.png
-@MOZ_PKG_NAME@ binary: image-file-in-usr-lib @MOZ_LIBDIR@/chrome/icons/default/default16.png
-@MOZ_PKG_NAME@ binary: image-file-in-usr-lib @MOZ_LIBDIR@/chrome/icons/default/default32.png
-@MOZ_PKG_NAME@ binary: image-file-in-usr-lib @MOZ_LIBDIR@/chrome/icons/default/default48.png
-@MOZ_PKG_NAME@ binary: image-file-in-usr-lib @MOZ_ADDONDIR@/extensions/{972ce4c6-7e08-4474-a285-3208198ce6fd}/icon.png
-@MOZ_PKG_NAME@ binary: image-file-in-usr-lib @MOZ_ADDONDIR@/extensions/{972ce4c6-7e08-4474-a285-3208198ce6fd}/preview.png
+@MOZ_PKG_NAME@ binary: embedded-library /@MOZ_LIBDIR@/libxul.so: libjpeg
+@MOZ_PKG_NAME@ binary: embedded-library /@MOZ_LIBDIR@/libmozsqlite3.so: sqlite
+@MOZ_PKG_NAME@ binary: image-file-in-usr-lib
