@@ -62,6 +62,8 @@ firefox-trunk (23.0~a1~hg20130426r129904-0ubuntu1) UNRELEASED; urgency=low
     - update debian/build/rules.mk
   * Remove the executable bit from searchplugins
     - update debian/build/rules.mk
+  * Silence an embedded-library warning and some image-file-in-usr-lib warnings
+    - update debian/firefox.lintian-overrides.in
 
  -- Chris Coulson <chris.coulson@canonical.com>  Wed, 03 Apr 2013 17:19:15 +0100
 
